fix: disable un-collapsing for published questions

--- a/resources/sass/poll.scss
+++ b/resources/sass/poll.scss
@@ -46,11 +46,11 @@
         transition: background-color 0.1s ease;
         
 
-        &.collapsed {
+        &.collapsed:not(.edit-lock) {
             cursor: pointer;
         }
 
-        &.collapsed:hover, & .collapse-chevron:hover {
+        &.collapsed:hover:not(.edit-lock), & .collapse-chevron:hover {
             background-color: var(--bg-section-hover);
         }
 
@@ -117,6 +117,11 @@
         border: 2px solid oklch(from var(--primary-color) calc(l - 0.0) calc(c - 0.0) h);
     }
 
+    .edit-buttons {
+        display: flex;
+        gap: 3px;
+    }
+
     ul.question-list{
         /*background-color: oklch(from var(--primary-color) calc(l + 0.3) calc(c - 0.1) h);*/
         & > .li {
@@ -145,6 +150,8 @@
         .option-delete {
             --danger-color: #c13434;
             --danger-pale: #f9d5d5;
+
+
             padding: 3px;
             border: 1px solid var(--danger-color);
             background-color: var(--danger-pale);
@@ -165,8 +172,22 @@
             &:active {
                 box-shadow: inset 0px 2px 3px #00000033;
             }
+
+            &:disabled {
+                background-color: oklch(from var(--danger-pale) calc(l - 0.0) 0 h);
+                color: oklch(from var(--danger-color) calc(l - 0.0) 0 h);
+                border-color: oklch(from var(--danger-color) calc(l - 0.0) 0 h);
+            }
+        }
+
+        .question-delete {
+
         }
     }
+}
+
+.editor {
+
 }
 
 #poll-summary .actions {
